2006-12-28  Don Allingham  <don@gramps-project.org>
	* src/docgen/PdfDoc.py: convert image name to str from unicode
	due to a ReportLab bug.

2006-12-27  Don Allingham  <don@gramps-project.org>
	* configure.in: change version number to 2.2.5

2006-12-26  Zsolt Foldvari  <zsolt.foldvari@gmail.com>
	* src/GrampsWidgets.py: Add MaskedEntry, a widget to emulate the
	KiwiEntry from the Kiwi project.

2006-12-25  Alex Roitman  <shura@gramps-project.org>
	* config.sub, config.guess: Update.

2006-12-25  Stefan Bjork  <betula@users.sourceforge.net>
	* src/DateHandler/_Date_sv.py: Revert endash changes. Passes
	date_test.py.

2006-12-24  Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: Fixes.
	* src/plugins/holidays.xml: Fixes.

2006-12-23  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_EventRefModel.py: properly sort events by date (bug #508)
	* src/DisplayTabs/_EventEmbedList.py: properly sort events by date (bug #508)

2006-12-22  Alex Roitman  <shura@phy.ucsf.edu>
	* src/GrampsDb/_WriteGedcom.py (write_source_ref): Write PAGE as a
	single line.
	* src/Editors/_EditFamily.py (build_interface): Remove extra
	show() call.
	* src/Editors/_EditMedia.py (_local_init): Remove extra show() call.
	* src/Editors/_EditEvent.py (_local_init): Remove extra show() call.
	* src/Editors/_EditRepository.py (_local_init): Remove extra
	show() call.
	* src/Editors/_EditSecondary.py (_set_size): Remove extra show() call.
	* src/Editors/_EditReference.py (_set_size): Remove extra show() call.
	* src/Editors/_EditSource.py (_local_init): Remove extra show() call.

2006-12-22  Don Allingham  <don@gramps-project.org>
	* src/Selectors/_SelectPerson.py (SelectPerson.add_columns): allow
	the columns to be resizable (bug #788)
	* src/GrampsDb/_WriteXML.py: fix bookmark handling
	* src/plugins/FindDupes.py (Merge.find_potentials): update internal
	list on call (bug# 789)
	* src/Merge/_MergePerson.py (MergePeople.merge_person_information): 